Refactor: java version 17로 변경 (#36)
* chore: java21에서 17로 다운
- GCP 배포시 21 java 설치가 안됨

* refactor: getFirst()를 get(0)으로 변경